[package]
name = "parity-tokio-ipc-extended"
version = "0.1.0"
edition = "2021"
authors = ["NikVolf <nikvolf@gmail.com>", "Phillip Couto<phillip@couto.in>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
Interprocess communication library for tokio.
Based on parity-tokio-ipc.
"""

[dependencies]
futures = "0.3"
log = "0.4"
rand = "0.7"
tokio = { version = "1.7.0", features = ["net", "time"] }
libc = "0.2.65"
tonic = { version  = "^0.8", optional = true, default-features = false}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winnt", "accctrl", "aclapi", "securitybaseapi", "minwinbase", "winbase"] }

[dev-dependencies]
tokio = { version = "1.7.0", features = ["io-util", "rt", "time", "macros"] }

[features]
tonic = ["dep:tonic"]
